# MaCySTe

./: CHANGELOG.md  LICENSE.txt  Makefile  README.md
.github/workflows/: containers.yml  docs.yml
docs/: Makefile  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/extending/: contributing.md  licensing.md  repo.md
docs/src/reference/: addon-attacker.md  addon-siem.md  attack-gui.md  autopilot.md  bridgecommand.md  ecdis.md  gui-home.md  instruments-autopilot.md  instruments-rudder.md  instruments-telegraphs.md  instruments.md  malware.md  mini-router.md  modbus-probe.md  mux-demux.md  nats-modbus.md  nats.md  network.md  nmea-probe.md  openplc.md  opensearch.md  ppi-asterix.md  ppi-opencpn.md  ppi.md  propulsion-system.md  radar-converter.md  scenario-genova.md  scenario.md  ship.md  spa-hoster.md  steering-gear-system.md  toolkit.md  udp-to-websocket.md  websocket-to-websocket.md
docs/src/running/: prerequisites.md  running.md
docs/src/using/: attacks-ins.md  attacks-radar.md  attacks.md  dataset-modbus.md  dataset-nmea.md  dataset-radar-asterix.md  dataset-radar-navico.md  dataset-radar.md  dataset.md
src/: Makefile  settings.Makefile
src/configs/: README.md
src/configs/nats/: nats.conf
src/containers/: .gitignore
src/containers/spa_hoster/: Cargo.toml  Containerfile  README.md
src/containers/spa_hoster/src/: main.rs
src/containers/udp_to_websocket/: .dockerignore  Cargo.toml  Containerfile  README.md
src/containers/udp_to_websocket/assets/: ws.js
src/containers/udp_to_websocket/src/: main.rs
src/scripts/: allocate_ip.py
(+278 files in other folders)
