[package]
name = "udp-to-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger =  "0.9"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }

axum = { version = "0.6", features = [ "ws" ] }
hyper = { version = "0.14", features = [ "full" ] }
tower = "0.4"
tower-http = { version = "0.3", features = ["compression-br","compression-deflate","compression-gzip","trace"] }

futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"
